# magma

./: .gitignore  CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in
ext/: CMakeLists.txt
include/magma/core/: iterator.h  range.h  thread_pool.h
include/magma/ral/: ral.h  ral_internal.h
include/magma/vk/: vk.h
include/magma/wsi/: window.h  wsi.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  thread_pool.c++
lib/ral/: CMakeLists.txt  device.c++  instance.c++  physical_device.c++  ral_internal.h
lib/vk/: CMakeLists.txt  error.c++  instance.c++  internal.h  loader.c++  physical_device.c++
lib/wsi/: CMakeLists.txt  linux_main.c++  win32.c++  win32_main.c++  xcb.c++
samples/: CMakeLists.txt
samples/minimal_wsi/: CMakeLists.txt  minimal_wsi.c++
samples/vk/: CMakeLists.txt  create_instance.c++
test/: CMakeLists.txt
test/core/: CMakeLists.txt  iterator_tests.c++  range_tests.c++  thread_pool_tests.c++
test/ral/: CMakeLists.txt  instance_tests.c++
test/vk/: CMakeLists.txt  instance_tests.c++
